Feature: Override load drops requirements 1/2