@@ -8,5 +8,9 @@ Tested with MineableGems **1.11.3**.
 - MineIt
 - MineableGems
 - asm:asm:LATEST (?)
-- io.earcam.wrapped:com.sun.tools.attach:LATEST (?)
-- (export natives folder **outside** the .jar)
+- io.earcam.wrapped:com.sun.tools.attach:LATEST (link with .jar)
+- (export the natives folder **outside** the .jar)
+
+## Execute dependencies
+- Add the natives folder
+- Run `export JDK_JAVA_OPTIONS="-Djdk.attach.allowAttachSelf=true"`
